MULTISITE-2525 Update bootstrap to 3.0.2

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -5,9 +5,6 @@
  * specific stylesheets for IE are called in template.php
  */
  
-/*! 
- * Bootstrap v3.0
- */
 // Core variables and mixins
 @import "../../bootstrap/less/variables.less";
 @import "../../bootstrap/less/mixins.less";
@@ -59,7 +56,7 @@
 @import "../../bootstrap/less/responsive-utilities.less";
 
 /*! 
- * Ec default 
+ * Ec resp 
  */
 //import page styles
 @import "style.less"; // global look and feel
