--- a/sites/all/themes/ec_resp/css/less/feature-faq.less
+++ b/sites/all/themes/ec_resp/css/less/feature-faq.less
@@ -1,12 +1,10 @@
 /* ---------------- faq  ----------------- */
 .view-faq ol.nav {
   list-style: decimal;
-  li {
-  	a {
-  		background-color: #fff;
-  	}
-  	blockquote {
-  		border-color: #fff;
+  > li {
+  	display: list-item;
+  	blockquote p {
+  		font-size: 1em;
   	}
   }
 }
