--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
@@ -9,7 +9,7 @@
 	font-style: normal;
 }
 
-[class*="multisite-icon-"] {
+[class^="multisite-icon-"], [class*=" multisite-icon-"] {
 	font-family: 'multisite-icons';
 	speak: none;
 	font-style: normal;
@@ -31,129 +31,135 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.multisite-icon-uniF000:before {
+.multisite-icon-embed-image:before {
+	content: "\e600";
+}
+.multisite-icon-reorder:before {
+	content: "\f0ca";
+}
+.multisite-icon-home:before {
+	content: "\e020";
+}
+.multisite-icon-cogs:before {
+	content: "\e021";
+}
+.multisite-icon-directions:before {
+	content: "\e022";
+}
+.multisite-icon-code:before {
+	content: "\e023";
+}
+.multisite-icon-publish:before {
+	content: "\e024";
+}
+.multisite-icon-language:before {
+	content: "\e025";
+}
+.multisite-icon-pictures:before {
+	content: "\e026";
+}
+.multisite-icon-check:before {
+	content: "\f047";
+}
+.multisite-icon-file:before {
+	content: "\f017";
+}
+.multisite-icon-newspaper:before {
+	content: "\e027";
+}
+.multisite-icon-calendar:before {
+	content: "\f074";
+}
+.multisite-icon-book:before {
+	content: "\f02e";
+}
+.multisite-icon-list:before {
+	content: "\e028";
+}
+.multisite-icon-bookmarks:before {
+	content: "\e029";
+}
+.multisite-icon-notification:before {
+	content: "\e02a";
+}
+.multisite-icon-bubbles:before {
+	content: "\e02b";
+}
+.multisite-icon-edit:before {
+	content: "\f045";
+}
+.multisite-icon-keyboard:before {
+	content: "\e03a";
+}
+.multisite-icon-group:before {
+	content: "\f0c1";
+}
+.multisite-icon-camera:before {
+	content: "\e02c";
+}
+.multisite-icon-location:before {
+	content: "\e02d";
+}
+.multisite-icon-menu:before {
+	content: "\e02e";
+}
+.multisite-icon-pie:before {
+	content: "\e02f";
+}
+.multisite-icon-stats:before {
+	content: "\e030";
+}
+.multisite-icon-archive:before {
+	content: "\e031";
+}
+.multisite-icon-comments-alt:before {
+	content: "\f0e7";
+}
+.multisite-icon-flow-branch:before {
+	content: "\e032";
+}
+.multisite-icon-paperplane:before {
+	content: "\e033";
+}
+.multisite-icon-vcard:before {
+	content: "\e034";
+}
+.multisite-icon-megaphone:before {
+	content: "\e035";
+}
+.multisite-icon-thumbs-up:before {
+	content: "\e036";
+}
+.multisite-icon-feed:before {
+	content: "\e037";
+}
+.multisite-icon-share:before {
+	content: "\e038";
+}
+.multisite-icon-question:before {
+	content: "\e03b";
+}
+.multisite-icon-light-bulb:before {
+	content: "\e03c";
+}
+.multisite-icon-link:before {
+	content: "\e03d";
+}
+.multisite-icon-earth:before {
+	content: "\e03e";
+}
+.multisite-icon-mail:before {
+	content: "\e03f";
+}
+.multisite-icon-crop:before {
+	content: "\e601";
+}
+.multisite-icon-new-tab:before {
+	content: "\e602";
+}
+.multisite-icon-uniF001:before {
 	content: "\f000";
 }
 .multisite-icon-flag:before {
 	content: "\e000";
-}
-.multisite-icon-reorder:before {
-	content: "\f0c9";
-}
-.multisite-icon-home:before {
-	content: "\e002";
-}
-.multisite-icon-cogs:before {
-	content: "\e001";
-}
-.multisite-icon-directions:before {
-	content: "\e00f";
-}
-.multisite-icon-code:before {
-	content: "\e00e";
-}
-.multisite-icon-publish:before {
-	content: "\e00c";
-}
-.multisite-icon-language:before {
-	content: "\e00b";
-}
-.multisite-icon-pictures:before {
-	content: "\e00a";
-}
-.multisite-icon-check:before {
-	content: "\f046";
-}
-.multisite-icon-file:before {
-	content: "\f016";
-}
-.multisite-icon-newspaper:before {
-	content: "\e017";
-}
-.multisite-icon-calendar:before {
-	content: "\f073";
-}
-.multisite-icon-book:before {
-	content: "\f02d";
-}
-.multisite-icon-list:before {
-	content: "\e01a";
-}
-.multisite-icon-bookmarks:before {
-	content: "\e01b";
-}
-.multisite-icon-notification:before {
-	content: "\e01c";
-}
-.multisite-icon-bubbles:before {
-	content: "\e01e";
-}
-.multisite-icon-edit:before {
-	content: "\f044";
-}
-.multisite-icon-keyboard:before {
-	content: "\e039";
-}
-.multisite-icon-group:before {
-	content: "\f0c0";
-}
-.multisite-icon-camera:before {
-	content: "\e003";
-}
-.multisite-icon-location:before {
-	content: "\e018";
-}
-.multisite-icon-menu:before {
-	content: "\e014";
-}
-.multisite-icon-pie:before {
-	content: "\e019";
-}
-.multisite-icon-comments-alt:before {
-	content: "\f0e6";
-}
-.multisite-icon-vcard:before {
-	content: "\e015";
-}
-.multisite-icon-thumbs-up:before {
-	content: "\e013";
-}
-.multisite-icon-share:before {
-	content: "\e012";
-}
-.multisite-icon-light-bulb:before {
-	content: "\e011";
-}
-.multisite-icon-mail:before {
-	content: "\e010";
-}
-.multisite-icon-flow-branch:before {
-	content: "\e016";
-}
-.multisite-icon-paperplane:before {
-	content: "\e008";
-}
-.multisite-icon-archive:before {
-	content: "\e009";
-}
-.multisite-icon-megaphone:before {
-	content: "\e007";
-}
-.multisite-icon-feed:before {
-	content: "\e006";
-}
-.multisite-icon-question:before {
-	content: "\e005";
-}
-.multisite-icon-link:before {
-	content: "\e004";
-}
-.multisite-icon-earth:before {
-	content: "\e00d";
-}
-.multisite-icon-stats:before {
-	content: "\e01d";
-}
-.multisite-icon-embed-image:before {
-	content: "\e600";
 }
