--- a/sites/all/themes/ec_resp/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_resp/bootstrap/less/variables.less
@@ -105,7 +105,7 @@
 
 @table-bg:                           transparent; // overall background-color
 @table-bg-accent:                    #f9f9f9; // for striping
-@table-bg-hover:                     #f5f5f5;
+@table-bg-hover:                     #e9f2fa;
 @table-bg-active:                    @table-bg-hover;
 
 @table-border-color:                 #ddd; // table and cell border
