MULTISITE-2525 Update bootstrap to 3.0.2

--- a/sites/all/themes/ec_resp/css/less/feature-events.less
+++ b/sites/all/themes/ec_resp/css/less/feature-events.less
@@ -98,3 +98,9 @@
   .box-shadow(4px 6px 6px -6px @gray-dark);
   border-radius: 3px;   
 }
+
+.fc-header {
+  .fc-button-next {
+    margin-left: 12px;
+  }
+}
