--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -86,6 +86,7 @@
 @import "feature-notifications.less"; // feature notifications
 @import "feature-social-bookmark.less"; // feature social bookmark
 @import "feature-forum.less"; // feature forum
+@import "feature-megamenu.less"; // feature mega menu
 @import "feature-set.less"; // feature set
 
 @import "hack-ec.less"; // hack EC styles
