--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
@@ -17,14 +17,6 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-	
-	/* Enable Ligatures ================ */
-	-webkit-font-feature-settings: "liga";
-	-moz-font-feature-settings: "liga=1";
-	-moz-font-feature-settings: "liga";
-	-ms-font-feature-settings: "liga" 1;
-	-o-font-feature-settings: "liga";
-	font-feature-settings: "liga";
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
@@ -162,4 +154,7 @@
 }
 .multisite-icon-flag:before {
 	content: "\e000";
+}
+.multisite-icon-volume:before {
+	content: "\e603";
 }
