MULTISITE-2624 Add the icon to the feature set

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
@@ -155,6 +155,9 @@
 .multisite-icon-flag:before {
 	content: "\e000";
 }
+.multisite-icon-twitter:before {
+	content: "\e604";
+}
 .multisite-icon-volume:before {
 	content: "\e603";
 }
