MULTISITE-2538 Update display of feature set and fix inconsistencies

--- a/sites/all/themes/ec_resp/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_resp/bootstrap/less/variables.less
@@ -104,7 +104,7 @@
 @table-condensed-cell-padding:       5px;
 
 @table-bg:                           transparent; // overall background-color
-@table-bg-accent:                    #f9f9f9; // for striping
+@table-bg-accent:                    #fcfcfc; // for striping
 @table-bg-hover:                     #e9f2fa;
 @table-bg-active:                    @table-bg-hover;
 
