MULTISITE-2618 Update display of workbench block

--- a/sites/all/themes/ec_resp/css/less/node.less
+++ b/sites/all/themes/ec_resp/css/less/node.less
@@ -66,8 +66,9 @@
   padding: 0 15px 15px;
 }
 .node-unpublished {
-  margin: -20px -15px 0;
-  padding: 20px 15px 0;
+  margin: -15px -15px;
+  padding: 15px 15px;
+  background-color: #fff1d3;
   .comment-text .comment-arrow {
     border-left: 1px solid #fff4f4;
     border-right: 1px solid #fff4f4;
