--- a/sites/all/themes/ec_resp/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_resp/bootstrap/less/variables.less
@@ -544,7 +544,7 @@
 
 // Wells
 // -------------------------
-@well-bg:                     #f2f5f9;
+@well-bg:                     #fafafa;
 
 
 // Badges
