--- a/sites/all/themes/ec_resp/css/less/comment.less
+++ b/sites/all/themes/ec_resp/css/less/comment.less
@@ -50,3 +50,20 @@
 }
 
 .text-format-wrapper > a.ckeditor_links { display: none !important; }
+
+/* ---------------- Recent comment block  ----------------- */
+#block-comment-recent .list-group {
+  a.list-group-item {
+    border-bottom: none;
+    border-top: 1px solid #ddd;
+  }
+  span {
+    float: right;
+    padding-right: 15px;
+    font-size: 85%;
+    color: #999;
+  }
+  li.first a.list-group-item {
+    border-top: none;
+  }
+}
