MULTISITE-2618 Update display of workbench block

--- a/sites/all/themes/ec_resp/css/less/node.less
+++ b/sites/all/themes/ec_resp/css/less/node.less
@@ -75,6 +75,12 @@
   }
 }
 
+@media (max-width: @screen-sm-max) {
+  .node .node-info-workbench {
+    margin-bottom: 10px;
+  }
+}
+
 /* ------------------ Node form ------------------ */
 .node-form {
   .vertical-tabs {
@@ -96,5 +102,10 @@
       font-weight: normal;
       text-shadow: none;
     }
+  }
+}
+.workbench-moderation-moderate-form {
+  input[type=submit] {
+    margin-top: 5px;
   }
 }
