MULTISITE-2612 Update display of video field

--- a/sites/all/themes/ec_resp/css/less/node.less
+++ b/sites/all/themes/ec_resp/css/less/node.less
@@ -11,6 +11,11 @@
       margin-bottom: 0; 
     }      
   }
+  .field-type-video {
+    .thumbnail {
+      max-width: 200px;
+    }
+  }
   .node-info {
     .well {
       margin-bottom: 0;
