--- a/sites/all/libraries/ibeginshare/share-print.css
+++ b/sites/all/libraries/ibeginshare/share-print.css
@@ -1,1 +1,1 @@
-.share_button_show,.share_box,.share_content,.share_counter_container{display:none;}
+.share_button_show,.share_box,.share_content,.share_counter_container,.share_individual{display:none;}
