--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -84,46 +84,48 @@
     height:107px;
     width:210px;
   }
-  #banner-image-title {
+}
 
-  }
-  /* ------------------ service links ------------------ */
-  #services {
-    font-size:90%;
-    font-weight:normal;
-    position:absolute;
-    left:0;
-    top:2px;
-    right:0;
-    z-index:18;
-    padding:1px 5px 1px 0;
-    text-align:right;
-    li {
-      display:inline;
-      padding:3px 0;
-    }
-    a, 
-    a:visited {
-      background:url("../images/services-separator.gif") transparent left center no-repeat;
-      color:#396ea2;
-      text-decoration:none;
-      margin:0;
-      padding:0 0 3px 5px;
-      border:0;
-      font-weight:normal;
-      display:inline-block;
-    }
-    a:focus, 
-    a:hover, 
-    a:active {
-      color:#396ea2;
-      text-decoration:underline;
-      border:0;
-    }
-    a.first {
+/* ------------------ service links ------------------ */
+#services, #block-menu-menu-service-tools .menu {
+  font-size:90%;
+  font-weight:normal;
+  position:absolute;
+  left:0;
+  top:2px;
+  right:0;
+  z-index:18;
+  padding:1px 5px 1px 0;
+  text-align:right;
+  li {
+    display:inline;
+    padding:3px 0;
+    &.first a {
       border:0;
       background-image:none;
     }
+  }
+  a, 
+  a:visited {
+    background:url("../images/services-separator.gif") transparent left center no-repeat;
+    color:#396ea2;
+    text-decoration:none;
+    margin:0;
+    padding:0 0 3px 5px;
+    border:0;
+    font-weight:normal;
+    display:inline-block;
+  }
+  a:focus, 
+  a:hover, 
+  a:active {
+    color:#396ea2;
+    text-decoration:underline;
+    border:0;
+  }
+  a.first {
+    border:0;
+    background-image:none;      
   }
 }
 
@@ -143,6 +145,9 @@
       top: 28px;
       text-transform: none;
     }
+  }
+  #services, #block-menu-menu-service-tools .menu {
+    display: none;
   }
 }
 
@@ -297,7 +302,7 @@
 
 /* ------------------ Hack when js is enabled ------------------ */
 .js {
-  #layout-header #services {
+  #services, #block-menu-menu-service-tools .menu {
     padding-right:155px;
   }
   .language-selector {
