--- a/sites/all/themes/ec_resp/css/less/feature-wiki.less
+++ b/sites/all/themes/ec_resp/css/less/feature-wiki.less
@@ -1,8 +1,13 @@
 /* ---------------- Wikis  ----------------- */
 .node-wiki {
   #toc {
-    background-color: #fff;
     display: inline-block;
     padding: 10px 10px 10px 20px;
+    ul {
+      margin-top: 0;
+      margin-bottom: 0;
+      padding-bottom: 0;
+      padding-left: 20px;
+    }
   }
 }
