MULTISITE-2850 Improve display of wikis view

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -232,6 +232,26 @@ ul {
   }
 }
 
+#block-system-main .view-header h2 {
+  margin: -15px -15px 10px -15px;
+  padding: 10px 15px 10px 15px;
+  background-color: #fafafa;
+  border-radius: @border-radius-base @border-radius-base 0 0;
+}
+#block-system-main .view-content .views-row {
+  border-top: 1px solid #ddd;
+  padding-top: 15px;
+  margin-bottom: 15px;
+}
+#block-system-main .view-content .views-row.views-row-first {
+  border-top: none;
+}
+#block-system-main .view-content .views-row.views-row-last {
+  margin-bottom: 0;
+}
+#block-system-main .view-content .views-row h3 {
+  margin: 0 0 5px;
+}
 
 /* ------------------- Help ------------------- */
 
