MULTISITE-3020 move specific styling of feature set into the theme add default style

--- a/sites/all/themes/ec_resp/css/less/feature-set.less
+++ b/sites/all/themes/ec_resp/css/less/feature-set.less
@@ -3,16 +3,12 @@
   .list-group {
     margin: 0;
     padding: 0;
-    thead {
-      display: none;
-    }
     td {
       cursor: pointer;
     }
 
     /* Icon */
     .feature-set-image {
-      float: left;
       font-size: 45px;
       width: 55px;
       text-align: center;
@@ -20,7 +16,7 @@
 
     /* Text */
     blockquote {
-      margin: 0 0 0 55px;
+      margin: 0;
       padding: 0 0 0 10px;
       border-left: none;
       a.description {
@@ -38,7 +34,7 @@
     }
 
     /* Switcher */
-    td.switcher {
+    td.feature_set_switcher {
       width: 120px;
       text-align: center;
       .switch { 
