MULTISITE-2081 add margin on button

--- a/sites/all/themes/ec_resp/css/less/feature-events.less
+++ b/sites/all/themes/ec_resp/css/less/feature-events.less
@@ -139,6 +139,9 @@
   .fc-button-month:focus {
     color: #333;
   }
+  .fc-button-month {
+    margin-left: 5px;
+  }
   .fc-button-month.btn-primary {
     display: none;
   }
