MULTISITE-2080 add module tagadelic

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -659,6 +659,19 @@ tr.even, tr.odd {
   height: auto;
 }
 
+/* ---------------- Tags cloud  ----------------- */
+#block-tagadelic-taxonomy-tagadelic-taxonomy {
+  a.more,
+  a.more:visited,
+  a.more:hover {
+    font-size: 0.9em;
+    color: #999;
+    display: block;
+    text-align: right;
+    margin-top: 8px;
+    border-top: 1px solid #ddd;
+  }
+}
 
 /* ---------------- Region content top  ----------------- */
 .region-content_top {
