MULTISITE-2836 less and css file

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -88,5 +88,6 @@
 @import "feature-forum.less"; // feature forum
 @import "feature-megamenu.less"; // feature mega menu
 @import "feature-set.less"; // feature set
+@import "feature-media.less"; // media related
 
 @import "hack-ec.less"; // hack EC styles
