MULTISITE-2078 - improve display of view people - add block people - add image preset "media_thumbnail_small"

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -89,5 +89,6 @@
 @import "feature-megamenu.less"; // feature mega menu
 @import "feature-set.less"; // feature set
 @import "feature-media.less"; // media related
+@import "feature-profiles.less"; // feature extended profiles
 
 @import "hack-ec.less"; // hack EC styles
