--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -574,6 +574,16 @@ div.add-or-remove-shortcuts {
 .overlay div.add-or-remove-shortcuts {
   padding-top: 0.8em;
 }
+div.more-link > a,
+div.more-link > a:visited,
+div.more-link > a:hover {
+  font-size: 0.9em;
+  color: #999;
+  display: block;
+  text-align: right;
+  margin-top: 8px;
+  border-top: 1px solid #ddd;
+}  
 
 /* -------------- Tables -------------- */
 tr.even, tr.odd {
