--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'multisite-icons';
-	src:url('fonts/multisite-icons.eot');
-	src:url('fonts/multisite-icons.eot?#iefix') format('embedded-opentype'),
-		url('fonts/multisite-icons.ttf') format('truetype'),
-		url('fonts/multisite-icons.woff') format('woff'),
-		url('fonts/multisite-icons.svg#multisite-icons') format('svg');
+	src:url('fonts/multisite-icons.eot?5f3lf8');
+	src:url('fonts/multisite-icons.eot?#iefix5f3lf8') format('embedded-opentype'),
+		url('fonts/multisite-icons.woff?5f3lf8') format('woff'),
+		url('fonts/multisite-icons.ttf?5f3lf8') format('truetype'),
+		url('fonts/multisite-icons.svg?5f3lf8#multisite-icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -25,6 +25,18 @@
 
 .multisite-icon-embed-image:before {
 	content: "\e600";
+}
+.multisite-icon-music:before {
+	content: "\e605";
+}
+.multisite-icon-lock:before {
+	content: "\e606";
+}
+.multisite-icon-twitter:before {
+	content: "\e604";
+}
+.multisite-icon-volume:before {
+	content: "\e603";
 }
 .multisite-icon-reorder:before {
 	content: "\f0ca";
@@ -154,10 +166,4 @@
 }
 .multisite-icon-flag:before {
 	content: "\e000";
-}
-.multisite-icon-twitter:before {
-	content: "\e604";
-}
-.multisite-icon-volume:before {
-	content: "\e603";
 }
