MULTISITE-3353 Make header right region responsive

--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -18,6 +18,14 @@
     }
   }  
 }
+#responsive-header-right {
+  #search-block-form {
+    margin-bottom: 10px;
+    .form-item {
+      float: none;
+    }
+  }
+}
 
 /* --------------- Search Form ---------------- */
 #search-form {
