MULTISITE-3133 improve display of menu in sidebars

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -39,6 +39,9 @@
   .navbar-nav > .open > a:focus {
     border-radius: @border-radius-large @border-radius-large 0 0;
   }
+  .navbar {
+    margin-bottom: 0;
+  }
 }
 
 .region-sidebar-left #main-menu,
