--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -262,6 +262,9 @@ ul {
 }
 
 /* ----------------- Content ------------------ */
+#layout-body {
+  margin-top: 10px;
+}
 #content-title {
   display: none;
 }
