MULTISITE-3133 improve display of menu in sidebars

--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -19,6 +19,9 @@
   }  
 }
 #responsive-header-right {
+  .region-header-right {
+    float: none;
+  }
   #search-block-form {
     margin-bottom: 10px;
     .form-item {
