--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -264,6 +264,9 @@ ul {
 /* ----------------- Content ------------------ */
 #layout-body {
   margin-top: 10px;
+  &.reduced {
+    margin-left: 0;
+  }
 }
 #content-title {
   display: none;
