MULTISITE-3133 improve display of menu in sidebars

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -151,6 +151,11 @@ ul.nav-tabs {
   border-bottom: 1px solid @brand-primary;
   border-right: 1px solid @brand-primary;
   border-radius: 0 0 @border-radius-base 0;
+  #responsive-header-right,
+  #responsive-sidebar-left,
+  #responsive-sidebar-right {
+    margin-bottom: 15px
+  }
 }
 
 #sidebar-button {
