MULTISITE-3022 update bootstrap to 3.1.1

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -124,12 +124,12 @@ ul.nav-tabs {
         a {
           background-color: #ddd;
           border-color: #999;
+          color: #666;
         }
       }
     }
   }
 }
-
 
 /* --------------- Dropdown  --------------- */
 .dropdown-menu {
@@ -174,4 +174,10 @@ ul.nav-tabs {
       margin-top: 4px;
     }
   }
+}
+
+/* --------------- Admin menu  --------------- */
+#admin-menu, 
+#admin-menu .dropdown {
+  z-index: 1040;
 }
