--- a/sites/all/themes/ec_resp/css/less/workbench.less
+++ b/sites/all/themes/ec_resp/css/less/workbench.less
@@ -10,3 +10,12 @@ div.admin.my-workbench .left,
 div.admin.my-workbench .right {
 	margin: 0;
 }
+
+.view-workbench-moderation.view-display-id-moderate_all_page {
+  .views-field-moderation-actions {
+    ul {
+      padding: 0;
+      margin: 0;
+    }
+  }
+}
