--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -10,6 +10,7 @@
 /* --------------- Main Menu ------------ */
 #main-menu {
   font-size: 16px;
+  min-height: 55px;
   .navbar {
     border-radius: 0;
   }
