MULTISITE-3600 improve display of upcoming events block

--- a/sites/all/themes/ec_resp/css/less/feature-events.less
+++ b/sites/all/themes/ec_resp/css/less/feature-events.less
@@ -105,7 +105,7 @@
   }
 }
 
-/* block calendar */
+/* ---------------- Block calendar  ----------------- */
 .block .view-display-id-calendar_block {
   th {
     font-weight: normal;
@@ -152,4 +152,10 @@
   max-width: 240px;
   margin: 0 auto;
 }
-/* /block calendar */
+
+/* ---------------- Block upcoming events  ----------------- */
+.view-events .more-link a,
+.view-events .more-link a:hover,
+.view-events .more-link a:focus {
+  margin-top: 23px;
+}
