MULTISITE-3299 replacing the jstree library with custom js, adding some basic styles, adding opener in the template file

--- a/sites/all/modules/custom/taxonomy_browser/css/taxonomy_browser.css
+++ b/sites/all/modules/custom/taxonomy_browser/css/taxonomy_browser.css
@@ -1,6 +1,16 @@
 #tb_browser ul {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 14px;
+  list-style: none;
+  list-style-image: none;
+}
+
+#tb_browser .taxonomy-tree-opener {
+	cursor: pointer;
+}
+
+#tb_browser .menu-visible {
+	display: block;
 }
 
 #tb_view div {
