MULTISITE-3472 removing max-height for the mobile menu, replacing default document ready with drupal.behaviours in scripts.js, adding min width 320px again to body

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -37,6 +37,7 @@
 
 /* ---------- Overall Specifications ---------- */
 body {
+  min-width: 320px;
   word-wrap: break-word;
   margin: 0;
   padding: 0;
