MULTISITE-3640 add margin to footer

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -726,6 +726,7 @@ tr.even, tr.odd {
   border-top: 2px solid #0165A3;
   text-align: center;
   margin-top: 15px;
+  margin-bottom: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: #e3e1d9;
